# Chordial

./: .gitignore  README.md  index.html  package-lock.json  package.json  parser.js  pnpm-lock.yaml  vite.config.js
.pi/: taskplane.json
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.trae/documents/: Automix 功能实现计划.md  Chordial 代码优化计划.md  Chordial 性能优化计划.md  Player组件样式重构与去耦化.md  Tauri音乐元数据读取器集成方案.md  plan_20260124_192447.md  plan_20260124_193918.md  plan_20260125_080028.md  为播放器按钮添加悬浮提示信息框.md  优化响应式布局遮挡问题.md  优化底栏间距和滚动条位置.md  优化播放器界面设计.md  修复 AMLL BackgroundRender 组件调用 Bug.md  修复 AMLL 歌词组件居中问题.md  修复 AMLL 背景组件递归更新和歌词显示问题.md  修复 Chordial 项目代码坏味道.md  修复 MP3 专辑封面获取问题.md  修复 PlayerBackground.vue 的 ref 解包问题.md  修复 Tauri 构建编译警告.md  修复 lib.rs 上帝文件.md  修复 more-btn 定位问题.md  修复AMLL歌词和流体背景问题.md  修复LRC歌词解析问题.md  修复Player样式问题.md  修复前端性能问题.md  修复控制按钮换行布局.md  修复播放器控制按钮换行问题.md  修复构建警告 - 命名空间冲突.md  修复歌手页详情显示问题.md  修复歌词不显示的问题.md  修复歌词乱码和时间轴问题.md  修复歌词同步滚动和解析问题.md  修复音乐专辑封面显示问题.md  修复音乐播放问题.md  前端代码坏味道修复计划.md  前端适配后端 Automix 功能计划.md  实现响应式三栏布局与数据展示界面.md  实现音频元数据解析器 (parsers).md  播放界面响应式布局优化.md  新增 webDev 音乐源实现计划.md  (+11 more)
document/: Automix可行性.md  LYRICS_FLOW_DESIGN.md  LYRICS_MIGRATION_REPORT.md  MUSIC_RESOURCE_GUIDE.md  虚拟列表
src/: App.vue  app.css  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android/src/main/java/com/gozaoo/chordial/: ChordialPlatform.kt
src-tauri/capabilities/: default.json
src-tauri/crates/chordial-core/: Cargo.toml
src-tauri/crates/chordial-core/src/: app.rs  lib.rs  media.rs
src-tauri/crates/chordial-core/src/module/: mod.rs  perf.rs
src-tauri/crates/chordial-core/src/module/cache/: store.rs
src-tauri/crates/chordial-core/src/module/config/: mod.rs  store.rs
src-tauri/crates/chordial-core/src/module/music_library/: albums.rs  artists.rs  library.rs  lyrics.rs  mod.rs  models.rs  relations.rs  search.rs  songs.rs
src-tauri/crates/chordial-core/src/module/music_localSource/: folder.rs  mod.rs  scanner.rs  source.rs
src-tauri/crates/chordial-core/src/module/music_source/: manager.rs  mod.rs  resource.rs  traits.rs
src-tauri/crates/chordial-core/src/module/p2p/: broadcast.rs  manager.rs  mod.rs  protocol.rs  source.rs
src-tauri/crates/chordial-core/src/module/platform/: android.rs  android_bridge.rs  desktop.rs
src-tauri/crates/chordial-core/src/module/storage/: entry.rs  file.rs  memory.rs  mod.rs  persistent.rs
src-tauri/crates/chordial-server/: Cargo.toml
src-tauri/crates/chordial-server/src/: main.rs  state.rs
src-tauri/crates/chordial-server/src/routes/: cache.rs  config.rs  library.rs  media.rs  mod.rs  rpc.rs  sources.rs  storage.rs
src-tauri/crates/chordial-tauri/src/: commands.rs  lib.rs  main.rs  media_protocol.rs
src-tauri/src/: constants.rs  error.rs  lib.rs  lyric_enhancer.rs  state.rs  tests.rs
src-tauri/src/audio_engine/: analysis_cache.rs  analyzer.rs  beat_detection.rs  eq_filter.rs  mixer.rs  mod.rs  player.rs  time_stretch.rs
src-tauri/src/audio_engine/buffer/: mod.rs  ring_buffer.rs
src-tauri/src/audio_engine/decoder/: mod.rs  symphonia_decoder.rs
src-tauri/src/audio_engine/output/: cpal_output.rs  mod.rs
src-tauri/src/audio_metadata/: core.rs  mod.rs  tests.rs
src-tauri/src/audio_metadata/core/: error.rs  mod.rs  traits.rs  types.rs
src-tauri/src/audio_metadata/parsers/: flac.rs  m4a.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
src-tauri/src/audio_metadata/readers/: flac.rs  m4a.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
src-tauri/src/audio_metadata/utils/: encoding.rs  io.rs  mod.rs
src-tauri/src/cache/: cache_manager.rs  mod.rs
src-tauri/src/commands/: analysis.rs  library.rs  mod.rs  playback.rs  source.rs  window.rs
src-tauri/src/lyric_parser/: mod.rs  parser.rs  types.rs
src-tauri/src/lyric_parser/formats/: lrc.rs  mod.rs  qrc.rs  ttml.rs  yrc.rs
src-tauri/src/module/: commands.rs  media_protocol.rs  mod.rs
src-tauri/src/module/cache/: mod.rs  store.rs
src-tauri/src/module/config/: store.rs
src-tauri/src/module/music_library/: albums.rs  library.rs  mod.rs
src-tauri/src/module/music_localSource/: folder.rs  mod.rs  scanner.rs  source.rs  watcher.rs
src-tauri/src/module/music_source/: manager.rs  mod.rs  registrar.rs  registry.rs  resource.rs  traits.rs  types.rs
src-tauri/src/module/platform/: mod.rs
src-tauri/src/module/storage/: backend.rs  cache.rs  file.rs  mod.rs  persistent.rs
src-tauri/src/music_source/: album.rs  artist.rs  mod.rs  source.rs  source_manager.rs
src-tauri/src/scanner/: mod.rs  music_scanner.rs  track_builder.rs  webdav.rs
src/amll/: AmllPlayer.jsx  useAmllBridge.js  useAudioAnalyser.js
src/api/: album.js  artist.js  automix.js  p2p.js  tauri.js  window.js
src/api/lyrics/: index.js  lyrics.js
src/api/musicSource/: cache.js  chordialUrl.js  index.js  library.js  musicResource.js  resourceLoader.js  sources.js
src/api/storage/: cache.js  cacheBlob.js  config.js  index.js  storage.js  storageBlob.js
src/api/transport/: base.js  httpTransport.js  index.js  invokeTransport.js  selector.js
src/class/: Album.js  AlbumSummary.js  Artist.js  ArtistSummary.js  BlobResource.js  Lyric.js  Song.js  SourceId.js  Track.js  index.js
src/components/: AdvancedLyricsView.vue  LyricsView.vue  WindowControls.vue
src/components/common/: AlbumCollageBackground.vue  AlbumList.vue  ArtistList.vue  CoverImage.vue  TrackList.vue  index.js
src/components/layout/: AppBottomNav.vue  (+4 more)
src/composables/: useAnime.js  useCoverImage.js  useLibraryEvents.js  useLyricParser.js  useP2pEvents.js  usePlatform.js  useVirtualList.js
src/js/: resourceManager.js
src/routers/: index.js
src/stores/: amllSettings.js  player.js
src/styles/: amll-player.css
src/types/: album.ts  artist.ts  index.ts  track.ts
src/utils/: animePresets.js  lyricConverter.js  performanceMonitor.js
src/views/: About.vue  AlbumDetail.vue  Albums.vue  ArtistDetail.vue  Artists.vue  Home.vue  MusicSourceManager.vue  PlayerView.vue  Search.vue  SettingsView.vue  TestPage.vue  TrackDetail.vue  TrackDetailEnhanced.vue  Tracks.vue
(+19 files in other folders)
