[package]
name = "chordial"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chordial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 音乐元数据解析依赖
byteorder = "1.5"
encoding_rs = "0.8"
thiserror = "1.0"
log = "0.4"
memchr = "2.7"

# 音乐源和缓存管理依赖
dirs = "5"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_with = "3"

# Base64 编码
base64 = "0.22"

# 正则表达式
regex = "1"

# WebDAV 和 HTTP 请求
reqwest = { version = "0.12", features = ["blocking", "json"] }
tempfile = "3"
quick-xml = { version = "0.36", features = ["serialize"] }
url = "2"

# 音频播放引擎依赖
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "pcm"] }
cpal = "0.15"
rubato = "0.16"
rustfft = "6.2"
realfft = "3.4"
crossbeam = "0.8"
ringbuf = "0.4"

# 音频分析依赖
ndarray = "0.16"
anyhow = "1.0"

# 分析结果缓存
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = "1.3"
blake3 = "1.5"

# 性能优化依赖
parking_lot = "0.12"
dashmap = "5.5"
moka = { version = "0.12", features = ["sync", "future"] }
walkdir = "2.4"
