[package]
name = "chordial"
version = "0.1.0"
description = "A Music App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chordial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"



# 音乐源和缓存管理依赖
dirs = "5"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

uuid = { version = "1", features = ["v4", "serde"] }



# 音频播放引擎依赖
symphonia = { version = "0.6", features = ["mpa", "isomp4", "aac"] }

# 文件系统监听
notify = "8"

# 分析结果缓存
blake3 = "1.5"
parking_lot = "0.12.5"

