[package]
name = "chordial"
version = "0.1.0"
description = "A Music App"
authors = ["you"]
edition = "2021"
default-run = "chordial"

[lib]
name = "chordial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "crates/chordial-tauri/src/lib.rs"

[[bin]]
name = "chordial"
path = "crates/chordial-tauri/src/main.rs"

[workspace]
resolver = "2"
members = [
    "crates/chordial-core",
    "crates/chordial-server",
]

# Workspace 级共享依赖版本（各 crate 可按需引用）
[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# server 层核心（库调用形式）
chordial-core = { path = "crates/chordial-core" }

# 协议响应类型（与 core 共用同一 http crate）
http = "1"

# Tauri 框架
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"

# 序列化（命令参数）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 平台路径类型 + base64
parking_lot = "0.12.5"
tauri-plugin-notification = "2"

# P2P 事件桥接（mpsc 通道）
tokio = { version = "1", features = ["sync", "rt"] }

# Android JNI 桥接（仅 Android 目标）
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
# 此特性门控由 Tauri 的 mobile 入口使用
custom-protocol = ["tauri/custom-protocol"]

# ── Profile 配置 ──────────────────────────────────────────────────────
# dev 构建保留符号 + 轻量优化（perf 计时更准）
[profile.dev]
debug = true
opt-level = 0
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

# release 构建薄 LTO + 单 codegen-unit 提升性能
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
